--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Professional Email Signature Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css"> <!-- Absolute path to CSS file -->
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="/script.js"></script> <!-- Absolute path to JavaScript file -->
 </head>
 <body>
     <div class="container">
@@ -18,7 +17,7 @@
                 <button id="add-field" class="btn btn-secondary">Add Field</button>
                 <div class="color-picker">
                     <label for="text-color">Text Color:</label>
-                    <input type="color" id="text-color" value="#ffffff">
+                    <input type="color" id="text-color" value="#000000">
                 </div>
             </div>
             <div class="preview-section">
@@ -29,5 +28,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
