--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Professional Email Signature Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Changed to relative path -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <button id="add-field" class="btn btn-secondary">Add Field</button>
                 <div class="color-picker">
                     <label for="text-color">Text Color:</label>
-                    <input type="color" id="text-color" value="#000000">
+                    <input type="color" id="text-color" value="#ffffff">
                 </div>
             </div>
             <div class="preview-section">
@@ -28,6 +29,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Changed to relative path and moved to end of body -->
 </body>
 </html>
